feat(common): update mods
feat(server): return dimension viewer

feat(common): bell recipes

feat(common): ftbquests

feat(client): itlt

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ forge-*-installer.jar
 mrpack-install-windows.exe
 mrpack-install-linux
 reference/
+old-docs/
 
 # remove client config
 .pakku/overrides/config/*client.toml
