--- a/.pakku/overrides/config/bcc-common.toml
+++ b/.pakku/overrides/config/bcc-common.toml
@@ -3,7 +3,7 @@
 [general]
 	#The CurseForge project ID for the modpack
 	#Range: > 0
-	modpackProjectID = 0
+	modpackProjectID = 1385704
 	#The name of the modpack
 	modpackName = "Kumo O Tagayasu"
 	#The version of the modpack
