--- a/.pakku/client-overrides/config/bettertitlescreen-client.toml
+++ b/.pakku/client-overrides/config/bettertitlescreen-client.toml
@@ -1,7 +1,7 @@
 
 ["custom text"]
 	#Insert the custom title screen text you want here (supports multiple lines)
-	text = ["§dKumo O Tagayasu", "§6Create with a Zen mindset.", "§9Made by TskimiSeiran", "§9And Polaris_Light!"]
+	text = ["§dKumo O Tagayasu", "§9Made by Polaris_Light", "§9And TskimiSeiran", "交流群：1001667281", "Discord: ztTGqY28DJ"]
 
 [versions]
 	#Show which version of Minecraft the client is currently running.
