--- a/.pakku/overrides/config/the_bumblezone/general.toml
+++ b/.pakku/overrides/config/the_bumblezone/general.toml
@@ -5,7 +5,7 @@
 	#
 	# What skin variations of Variant Bees can spawn! Add more bee textures to this folder assets\the_bumblezone\textures\entity\bee_variants and define the bee in this config!
 	#
-	variantBeeTypes = ["redtail_bee", "green_bee", "blue_bee", "white_bee", "ukraine_bee", "trans_bee", "asexual_bee", "agender_bee", "aroace_bee", "aromantic_bee", "bisexual_bee", "pan_bee", "enby_bee", "reverse_bee", "neapolitan_bee"]
+	variantBeeTypes = ["redtail_bee"]
 
 ["Beehemoth Options"]
 	# 
