feat(common): add mods
feat(client): ftbq zh-hk & zh-tw

chore: fix json exclude

feat(common): beyond dimensions (Not Completed)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,6 +136,8 @@ jobs:
                 break
               fi
               echo "Server started successfully"
+              echo "Show log:"
+              cat logs/latest.log
               exit 0
             fi
             if ! kill -0 $SERVER_PID 2>/dev/null; then
